[gd_scene load_steps=4 format=2]

[ext_resource path="res://actors/brains/Brain.tscn" type="PackedScene" id=1]
[ext_resource path="res://actors/brains/CPUBrain.gd" type="Script" id=2]
[ext_resource path="res://assets/sprites/signs/X.png" type="Texture" id=3]

[node name="CPUBrain" instance=ExtResource( 1 )]
script = ExtResource( 2 )
target_location_jitter = 50.0

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="." index="0"]
path_desired_distance = 50.0
target_desired_distance = 50.0
path_max_distance = 100.0

[node name="ThinkTimer" type="Timer" parent="." index="1"]
wait_time = 3.0
autostart = true

[node name="ReleaseTimer" type="Timer" parent="." index="2"]
one_shot = true

[node name="DebugSprite" type="Sprite" parent="." index="3"]
visible = false
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 3 )

[node name="Path" type="Line2D" parent="DebugSprite" index="0"]
unique_name_in_owner = true
width = 40.0
default_color = Color( 1, 1, 1, 0.262745 )

[connection signal="path_changed" from="NavigationAgent2D" to="." method="_on_NavigationAgent2D_path_changed"]
[connection signal="timeout" from="ThinkTimer" to="." method="_on_ThinkTimer_timeout"]
[connection signal="timeout" from="ReleaseTimer" to="." method="_on_ReleaseTimer_timeout"]
